--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">FootballClub-Kotlin</string>
 
-    <string name="next_matches">Next matches</string>
-    <string name="last_matches">Last matches</string>
+    <string name="league_name">English Premier League</string>
+    <string name="next_events">Next matches</string>
+    <string name="last_events">Last matches</string>
+    <string name="detail_event">Detail match</string>
+    <string name="red_cards">Red cards</string>
+    <string name="yellow_cards">Yellow cards</string>
+    <string name="formation">Formation</string>
+    <string name="goalkeeper">Goalkeeper</string>
+    <string name="defender">Defender</string>
+    <string name="midfielder">Midfielder</string>
+    <string name="forward">Forward</string>
+    <string name="subtitutes">Subtitutes</string>
 </resources>
