--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">FootballClub-Kotlin</string>
+    <string name="my_favorites">My favorites</string>
+    <string name="added_to_favorites">Added to favorites</string>
+    <string name="removed_from_favorites">Removed from favorites</string>
 
     <string name="league_name">English Premier League</string>
     <string name="next_events">Next matches</string>
@@ -8,6 +11,7 @@
     <string name="red_cards">Red cards</string>
     <string name="yellow_cards">Yellow cards</string>
     <string name="formation">Formation</string>
+    <string name="shots">Shots</string>
     <string name="goalkeeper">Goalkeeper</string>
     <string name="defender">Defender</string>
     <string name="midfielder">Midfielder</string>
