--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">FootballClub-Kotlin</string>
+    <string name="choose_league">Pilih liga</string>
     <string name="my_favorites">My favorites</string>
     <string name="search_teams">Search teams</string>
     <string name="search_events">Search events</string>
     <string name="added_to_favorites">Added to favorites</string>
     <string name="removed_from_favorites">Removed from favorites</string>
 
-    <string name="league_name">English Premier League</string>
     <string name="next_events">Next matches</string>
     <string name="last_events">Last matches</string>
     <string name="teams">Teams</string>
