--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="search_events">Search events</string>
     <string name="added_to_favorites">Added to favorites</string>
     <string name="removed_from_favorites">Removed from favorites</string>
+    <string name="search_team_hint">Exp : Arsenal</string>
+    <string name="search_event_hint">Exp : Arsenal vs Chelsea</string>
 
     <string name="next_events">Next matches</string>
     <string name="last_events">Last matches</string>
